--- a/style.css
+++ b/style.css
@@ -114,9 +114,6 @@ body::before {
 h1 {
     font-family: 'Chakra Petch', sans-serif;
     font-size: 72px;
-    padding-top: 3rem;
-    margin-top: 2rem;
-    /* text-align: center; */
 }
 
 p,
@@ -139,6 +136,12 @@ button:disabled {
         font-size: 50px;
     }
 
+    .container{
+        width: 80%;
+        height: 100%;
+        margin-top: 3rem;
+    }
+
     .container__botao {
         font-size: 16px;
     }
@@ -149,7 +152,6 @@ button:disabled {
     }
 
     .container__imagem-pessoa {
-        width: 50%;
         margin: 0 auto;
         display: block;
     }
